--- a/portfolio.html
+++ b/portfolio.html
@@ -639,38 +639,65 @@
           <a href="#" class="mobile-menu__site-nav__link">Контакты</a>
         </li>
       </ul>
-      <ul class="mobile-menu__contacts-list">
-        <li class="mobile-menu__contacts-item">
-          <a
-            href="mailto:info@devstudio.com"
-            class="mobile-menu__contacts-link mobile-menu__contacts-link--mail"
-          >
-            info@devstudio.com
-          </a>
-        </li>
-        <li class="mobile-menu__contacts-item">
-          <a
-            href="tel:+380961111111"
-            class="mobile-menu__contacts-link mobile-menu__contacts-link--tel"
-          >
-            +38 096 111 11 11
-          </a>
-        </li>
-      </ul>
-      <ul class="mobile-menu__social-links">
-        <li class="mobile-menu__social-links__item">
-          <a class="mobile-menu__social-links__link" href="#"> Instagram </a>
-        </li>
-        <li class="mobile-menu__social-links__item">
-          <a class="mobile-menu__social-links__link" href="#"> Twitter </a>
-        </li>
-        <li class="mobile-menu__social-links__item">
-          <a class="mobile-menu__social-links__link" href="#"> Facebook </a>
-        </li>
-        <li class="mobile-menu__social-links__item">
-          <a class="mobile-menu__social-links__link" href="#"> LinkedIn </a>
-        </li>
-      </ul>
+     <div>
+        <ul class="mobile-menu__contacts-list">
+          <li class="mobile-menu__contacts-item">
+            <a
+              href="tel:+380961111111"
+              class="mobile-menu__contacts-link mobile-menu__contacts-link--tel"
+            >
+              +38 096 111 11 11
+            </a>
+          </li>
+          <li class="mobile-menu__contacts-item">
+            <a
+              href="mailto:info@devstudio.com"
+              class="
+                mobile-menu__contacts-link mobile-menu__contacts-link--mail
+              "
+            >
+              info@devstudio.com
+            </a>
+          </li>
+        </ul>
+        <ul class="mobile-menu__social-links">
+          <li class="mobile-menu__social-links__item">
+            <a
+              class="mobile-menu__social-links__link"
+              href="https://www.instagram.com/"
+              target="_blank"
+            >
+              Instagram
+            </a>
+          </li>
+          <li class="mobile-menu__social-links__item">
+            <a
+              class="mobile-menu__social-links__link"
+              href="https://twitter.com/"
+            >
+              Twitter
+            </a>
+          </li>
+          <li class="mobile-menu__social-links__item">
+            <a
+              class="mobile-menu__social-links__link"
+              href="https://facebook.com/"
+              target="_blank"
+            >
+              Facebook
+            </a>
+          </li>
+          <li class="mobile-menu__social-links__item">
+            <a
+              class="mobile-menu__social-links__link"
+              href="https://www.linkedin.com"
+              target="_blank"
+            >
+              LinkedIn
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
     <script src="./js/mobile-menu.js"></script>
   </body>
